# DiyazBank

./: Dockerfile  pyproject.toml  requirements.txt
src/: config.py  database.py  main.py
src/account/: models.py  repository.py  router.py  schemas.py  utils.py
src/auth/: jwt.py  router.py  schemas.py  utils.py
src/operations/: models.py  repositry.py  router.py  schemas.py  service.py  utils.py
src/user/: schemas.py
tests/account/: conftest.py  test_models.py  test_repository.py
tests/user/: test_models.py
