[tool.poetry]
name = "diyazbank"
version = "0.1.0"
description = ""
authors = ["D-Diyazzz <diyazzz.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
sqlalchemy = "^2.0.11"
dotenv = "^0.0.5"
alembic = "^1.10.4"
uvicorn = "^0.21.1"
asyncpg = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
