[tool.poetry]
name = "diyazbank"
version = "0.1.0"
description = ""
authors = ["D-Diyazzz <diyazzz.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
sqlalchemy = "^2.0.11"
dotenv = "^0.0.5"
alembic = "^1.10.4"
uvicorn = "^0.21.1"
asyncpg = "^0.27.0"
python-dotenv = "^1.0.0"
passlib = "^1.7.4"
python-jose = "^3.3.0"
pyjwt = "^2.6.0"
greenlet = "^2.0.2"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
anyio = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
